--- a/sharinpix/src/aura/SharinPixSearch/SharinPixSearch.cmp
+++ b/sharinpix/src/aura/SharinPixSearch/SharinPixSearch.cmp
@@ -9,7 +9,7 @@
     <aura:attribute name="tokens" type="Object"/>
     <aura:attribute name="loading" type="Boolean" default="false"/>
 
-    <aura:attribute name="eventListener" type="Object" access="private"/>
+    <aura:attribute name="eventListener" type="Object"/>
     <aura:attribute name="searchReady" type="Boolean" default="false"/>
 
     <aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
