--- a/sharinpix/src/aura/SharinPixSearch/SharinPixSearch.cmp
+++ b/sharinpix/src/aura/SharinPixSearch/SharinPixSearch.cmp
@@ -1,4 +1,4 @@
-<aura:component controller="SharinPixSearchController" implements="flexipage:availableForAllPageTypes,forceCommunity:availableForAllPageTypes,force:appHostable">
+<aura:component controller="SharinPixSearchController" access="global" implements="flexipage:availableForAllPageTypes,forceCommunity:availableForAllPageTypes,force:appHostable">
     <aura:attribute name="reportId" type="String" access="global"/>
     <aura:attribute name="reportParameters" type="String" access="global"/>
     <aura:attribute name="tagOperator" type="String" default="OR" access="global"/>
@@ -26,7 +26,7 @@
 
     <div style="{! 'display: ' + (empty(v.errorMsg) ? 'block' : 'none') }">
         <div style="{! 'display: ' + (v.loading ? 'block' : 'none') + '; height: ' + v.height + 'px' }">
-            <c:Loading/>
+            <c:Loading />
         </div>
         <div style="{! 'display: ' + (v.loading ? 'none' : 'block') }">
             <iframe aura:id="SharinPix" src="{! v.searchUrl }" width="100%" height="{! v.height + 'px' }" style="border: 0;" onload="{! c.stopLoading }"></iframe>
